Fixed Home Overflow

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -8,6 +8,8 @@
 body {
   background-color: $bg-dark-color;
   color: $fg-dark-color;
+
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
